--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@ body{
     margin:0;
     padding:20px;
 }
+.assinatura{
+    position:fixed;
+    bottom:8px;
+    right:12px;
+    font-size:11px;
+    color:#6c757d;
+    opacity:0.7;
+    font-family:"Segoe UI", Arial, sans-serif;
+    pointer-events:none;
+}
+
+.assinatura-direita{ right:12px; }
+.assinatura-esquerda{ left:12px; }
+
 .container{
     max-width:1000px;
     margin:auto;
@@ -269,6 +283,14 @@ function aplicarFiltro(){
 // ===== INICIAR =====
 carregarEscalaDoDia(dataInput.value);
 </script>
+
+<div class="assinatura">
+    Desenvolvido por SD PM 154.466-7 ANDERSON SILVA
+</div>
+
+<div class="assinatura">
+    Desenvolvido por SD PM 154.466-7 ANDERSON SILVA
+</div>
 
 </body>
 </html>
